# make_desicion

./: .env-sample  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
app/: create_app.py  database.py  models.py  schemas.py  services.py  types.py  utils.py
static/: main.js
templates/: home.html  layout.html
